--- a/index.html
+++ b/index.html
@@ -1,54 +1,57 @@
 <!DOCTYPE HTML>
-<html lang="pt">
+<html lang="pt-br">
+
 <head>
-<meta charset="utf-8">
-<meta name="author" content="Guilherme F. Nascimento">
-<meta name="description" content="Cursando Ciência da Computação-UNESC">
-<title>Atividade</title>
-<link rel="stylesheet" href="/css/estilo.css">
-<link rel="icon" href="/img/buggatti.jpg">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1"/>
+    <meta charset="utf-8">
+    <meta name="author" content="Guilherme F. Nascimento">
+    <meta name="description" content="Cursando Ciência da Computação-UNESC">
+    <title>Atividade</title>
+    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="icon" href="img/buggatti.jpg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 </head>
+
 <body>
     <header>
         <a href="/">Logo<a>
-        <nav>
+                <nav>
                     <ul>
-<li><a href="/">Sobre</a></li>
-<li><a href="/">Produtos</a></li>
-<li><a href="/">Promoções</a></li>
-<li><a href="/">Notícias</a></li>
-<li><a href="/">Suporte</a></li>               
-<li><a href="/">Contato</a></li>
-</ul>        
-        </nav>
+                        <li><a href="/">Sobre</a></li>
+                        <li><a href="/">Produtos</a></li>
+                        <li><a href="/">Promoções</a></li>
+                        <li><a href="/">Notícias</a></li>
+                        <li><a href="/">Suporte</a></li>
+                        <li><a href="/">Contato</a></li>
+                    </ul>
+                </nav>
     </header>
-<h3>Section Flexbox</h3>        
-<section>
-<article>
-    <img src="img/buggatti.jpg">
-    <p>Legenda</p>        
-</article>
-<article>
-    <img src="img/buggatti.jpg">
-    <p>Legenda</p>        
-</article>
+    <h3>Section Flexbox</h3>
+    <section>
         <article>
             <img src="img/buggatti.jpg">
-            <p>Legenda</p>        
-</article>
-<article>
-    <img src="img/buggatti.jpg">
-    <p>Legenda</p>        
-</article>
-<article>
+            <p>Legenda</p>
+        </article>
+        <article>
             <img src="img/buggatti.jpg">
-    <p>Legenda</p>        
-</article>
-<article>
-    <img src="img/buggatti.jpg">
-    <p>Legenda</p>        
-</article>  
-    </section>        
+            <p>Legenda</p>
+        </article>
+        <article>
+            <img src="img/buggatti.jpg">
+            <p>Legenda</p>
+        </article>
+        <article>
+            <img src="img/buggatti.jpg">
+            <p>Legenda</p>
+        </article>
+        <article>
+            <img src="img/buggatti.jpg">
+            <p>Legenda</p>
+        </article>
+        <article>
+            <img src="img/buggatti.jpg">
+            <p>Legenda</p>
+        </article>
+    </section>
 </body>
+
 </html>
